# ame-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  ngrok.yml  pyproject.toml  requirements.txt
ame_ollama/: about_ollama.md  fine_tuning_notes.md  model_lists.py  ollama_caller.py  ollama_direct.py
finetuning/: setup_scripts.py
templates/: chat.html
